# sgDetectorQtQml

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.4.10-pre1
Resource/: qml.qrc
Resource/AppMain/: ContentVideo.qml  main.qml
Source/Inc/: QueueFPS.h  SGDetFilter.h  SGDetFilterRunnable.h  SSDNet.h
Source/Src/: SGDetFilter.cpp  SGDetFilterRunnable.cpp  SSDNet.cpp  libtorchSSD.cpp  main.cpp
